add validator attribute
add validator attribute

--- a/docs/jade/scripts-dev.jade
+++ b/docs/jade/scripts-dev.jade
@@ -40,6 +40,8 @@ script(src='docs/js/app.js')
 script(src='src/js/module.js')
 script(src='src/js/helpers.js')
 script(src='src/js/themes.js')
+script(src='src/js/validation.js')
+script(src='src/js/validation-rule.js')
 
 script(src='src/js/editable-form/controller.js')
 script(src='src/js/editable-form/directive.js')
