--- a/docs/jade/navbar.jade
+++ b/docs/jade/navbar.jade
@@ -16,9 +16,9 @@ nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
           a(href="https://github.com/vitalets/angular-xeditable") Github
         if env !== 'prod'  
           li
-            a(href="/test/e2e/dev-test.html") dev-test
+            a(href="./test/e2e/dev-test.html") dev-test
           li
-            a(href="/test/e2e/docs-test.html") prod-test
+            a(href="./test/e2e/docs-test.html") prod-test
 
       form.navbar-form.navbar-right
         a.btn.btn-primary(href="zip/angular-xeditable-"+version+'.zip', style="font-weight:bold")
