--- a/docs/jade/overview.jade
+++ b/docs/jade/overview.jade
@@ -25,6 +25,9 @@ table(style="width: 50%; min-width: 200px")
         * [time](#bstime)
         * [html5 inputs](#html5-inputs)        
         * [typeahead](#typeahead)
+        * [ui-select(simple)](#ui-select-simple)
+        * [ui-select(with template)](#ui-select-template)
+        * [ui-select(remote data)](#ui-select-remote)
 
     td(style="width: 50%; vertical-align: top")
       :markdown
