--- a/docs/jade/scripts-dev.jade
+++ b/docs/jade/scripts-dev.jade
@@ -1,6 +1,6 @@
 //theme: Bootstrap 3, Bootstrap 2, default
 link(ng-repeat="c in css", ng-href="{{c}}", rel="stylesheet", media="screen")
-//link(href="libs/bootstrap/3.0.0/css/bootstrap.css", rel="stylesheet", media="screen")
+link(href="libs/bootstrap/3.0.0/css/bootstrap.css", rel="stylesheet", media="screen")
 //link(href="libs/bootstrap/2.3.2/css/bootstrap.css", rel="stylesheet", media="screen")
 //link(href="libs/bootstrap/3.0.0/css/bootstrap-responsive.css", rel="stylesheet", media="screen")
 
@@ -18,8 +18,15 @@ script(src="libs/jquery/jquery-2.0.3.js")
 //script(src='libs/angular/1.0.8/angular.js')
 //script(src='libs/angular/1.0.8/angular-mocks.js')
 
-script(src='libs/angular/1.2.7/angular.js')
-script(src='libs/angular/1.2.7/angular-mocks.js')
+//script(src='libs/angular/1.2.7/angular.js')
+//script(src='libs/angular/1.2.7/angular-mocks.js')
+script(src='libs/angular/1.3.13/angular.js')
+script(src='libs/angular/1.3.13/angular-mocks.js')
+script(src='libs/angular/1.3.13/angular-sanitize.js')
+//UI-select
+script(src='libs/ui-select/select.js')
+link(href="libs/ui-select/select.css", rel="stylesheet", media="screen")
+
 
 //bootstrap
 script(src="libs/bootstrap/3.0.0/js/bootstrap.js")
@@ -42,6 +49,7 @@ script(src='src/js/helpers.js')
 script(src='src/js/themes.js')
 script(src='src/js/validation.js')
 script(src='src/js/validation-rule.js')
+script(src='src/js/filters.js')
 
 script(src='src/js/editable-form/controller.js')
 script(src='src/js/editable-form/directive.js')
@@ -57,5 +65,6 @@ script(src='src/js/directives/bsdate.js')
 script(src='src/js/directives/bstime.js')
 script(src='src/js/directives/radiolist.js')
 script(src='src/js/directives/checklist.js')
+script(src='src/js/directives/ui-select.js')
 
 
