--- a/docs/jade/scripts-prod.jade
+++ b/docs/jade/scripts-prod.jade
@@ -8,9 +8,12 @@ link(href="dist/css/xeditable.css", rel="stylesheet", media="screen")
 link(href="docs/css/docs.css", rel="stylesheet", media="screen")
 
 //angular
-script(src='libs/angular/1.2.7/angular.js')
-script(src='libs/angular/1.2.7/angular-mocks.js')
+//script(src='libs/angular/1.2.7/angular.js')
+//script(src='libs/angular/1.2.7/angular-mocks.js')
 
+script(src='libs/angular/1.3.13/angular.js')
+script(src='libs/angular/1.3.13/angular-mocks.js')
+script(src='libs/angular/1.3.13/angular-sanitize.js')
 //jquery (needed for bootstrap)
 script(src="libs/jquery/jquery-1.10.2.min.js")
 //bootstrap
