--- a/docs/jade/scripts-prod.jade
+++ b/docs/jade/scripts-prod.jade
@@ -18,6 +18,9 @@ script(src='libs/angular/1.3.13/angular-sanitize.js')
 script(src="libs/jquery/jquery-1.10.2.min.js")
 //bootstrap
 script(src="libs/bootstrap/3.0.0/js/bootstrap.js")
+//UI-select
+script(src='libs/ui-select/select.js')
+link(href="libs/ui-select/select.css", rel="stylesheet", media="screen")
 
 //angular-ui-bootstrap
 script(src="libs/angular-ui/bootstrap/ui-bootstrap-tpls-0.6.0.min.js")
