add custom editor

--- a/docs/jade/scripts-dev.jade
+++ b/docs/jade/scripts-dev.jade
@@ -66,5 +66,6 @@ script(src='src/js/directives/bstime.js')
 script(src='src/js/directives/radiolist.js')
 script(src='src/js/directives/checklist.js')
 script(src='src/js/directives/ui-select.js')
+script(src='src/js/directives/custom.js')
 
 
