--- a/docs/jade/overview.jade
+++ b/docs/jade/overview.jade
@@ -28,6 +28,7 @@ table(style="width: 50%; min-width: 200px")
         * [ui-select(simple)](#ui-select-simple)
         * [ui-select(with template)](#ui-select-template)
         * [ui-select(remote data)](#ui-select-remote)
+        * [custom](#custom)
 
     td(style="width: 50%; vertical-align: top")
       :markdown
